--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -62,3 +62,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: NetSeven\Bundle\OggivadoioBundle\Entity\User
+
+stof_doctrine_extensions:
+    default_locale: it_IT
+    orm:
+      default:
+        timestampable: true
