--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "jms/di-extra-bundle": "1.1.*",
         "kriswallsmith/assetic": "1.1.*@dev",
         "friendsofsymfony/user-bundle": "2.0.x-dev",
-        "doctrine/doctrine-fixtures-bundle": "dev-master"
+        "doctrine/doctrine-fixtures-bundle": "dev-master",
+        "stof/doctrine-extensions-bundle": "1.1.x-dev"
     },
     "scripts": {
         "post-install-cmd": [
